--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <!-- Шапка сайта-->
     <header>
         <nav>
-            <a href="https://www.google.com">
+            <a href="/index.html">
                 <!-- логотип ссылка-->
                 WebStudio
             </a>
             <ul>
-                <li><a href="#">Студия</a></li>
+                <li><a href="/index.html">Студия</a></li>
                 <li><a href="/portfolio.html">Портфолио</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
@@ -28,15 +28,15 @@
         </ul>
     </header>
     <main>
-        <!-- Герой-->
-        <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </section>
-        </div>
+        <!-- Герой div удалила-->
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
         <!--Особенности-->
         <section>
+            <h2>Особенности нашей компании</h2>
+            <!--h2 не видно, не забыть убрать в CSS!!!-->
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -111,12 +111,14 @@
     <!--Футер-->
     <footer>
         <!-- логотип ссылка-->
-        <a href="https://www.google.com">
+        <a href="/index.html">
             WebStudio
         </a>
         <address>
             <ul>
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li>
+                    <h4>г. Киев, пр-т Леси Украинки, 26<h4>
+                </li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
